fix: packages text overflow

--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -96,6 +96,8 @@
       margin-bottom: 0
   &__text
     max-width: 299px
+    max-height: 155px
+    overflow-y: auto
     margin: 27px 0 43px
     font-style: normal
     font-weight: normal
@@ -120,17 +122,6 @@
       font-size: 14px
       line-height: 18px
       text-decoration-line: line-through
-    // &::before
-    //   content: '$10,500'
-    //   position: absolute
-    //   top: -23px
-    //   left: 0
-    //   font-style: normal
-    //   font-weight: normal
-    //   font-size: 14px
-    //   line-height: 18px
-    //   text-decoration-line: line-through
-    //   color: inherit
   &__button
     width: 120px
     padding: 10px 26px
